--- a/style.css
+++ b/style.css
@@ -3,16 +3,9 @@ body{
 	flex-direction: column;
 	margin: 0;
 	padding: 0;
-	/* font-family: Arial, Helvetica, sans-serif; */
 	font-family: "Roboto", sans-serif;
 
 }
-
-.roboto-regular {
-	font-family: "Roboto", sans-serif;
-	font-weight: 400;
-	font-style: normal;
-  }
 
 ul{
 	list-style-type: none;
@@ -63,18 +56,120 @@ button{
 	flex-direction: column;
 	gap: 10px;
 }
+
+.hero-main{
+	font-size: 48px;
+	font-weight: bolder;
+}
+
+.hero-secondary{
+	font-size: 18px;
+	font-weight: 100;
+	color: #E5E7EB;
+	font-style: normal;
+}
+
 .header{
  /* display: flex; */
 }
 
+.carousel-section{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 50px 0px;
+	gap: 30px;
+}
+
+.carousel-section span{
+	color: #1F2937;
+	font-size: 36px;
+	font-weight: bolder;
+}
+
 .carousel{
+	display: flex;
+	gap: 50px;
+}
+
+.card{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	width: 150px;
+	gap: 10px;
+}
+
+.carousel .box{
+	width: 150px;
+	height: 150px;
+	border: solid #3882F6;
+	border-radius: 20px;
 
 }
 
 .quote-section{
 	background-color: #E5E7EB;
+	padding: 100px 260px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+.quote{
+	color: #1F2937;
+	font-size: 36px;
+	font-style: italic;
+	font-weight: lighter;
+	
+	
+}
+.quoter{
+	font-weight: bolder;
+	margin-left: auto;
 }
 
 .cta-section{
+	padding: 70px;
+}
 
+.cta-section .box{
+	margin: auto;
+	box-sizing: border-box;
+	padding: 70px 100px;
+	border-radius: 10px;
+	background-color: #3882F6;
+	width: 1000px;
+	height: 50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	
+}
+
+.cta-section .text{
+	display: flex;
+	flex-direction: column;
+}
+
+.cta-section .header-text{
+	color: #F9FAF8;
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.cta-section .sub-text{
+	color: #E5E7EB;
+	font-weight: lighter;
+}
+
+.cta-section button{
+	border: white solid 2px;
+}
+
+.footer{
+	color: #E5E7EB;
+	padding: 30px;
+	text-align: center;
 }
